# Horloq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  build.spec  generate_icons.py  pyproject.toml  requirements.txt  setup.py
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLE_PLUGINS.md  FEATURES.md  PLUGIN_DEVELOPMENT.md  PYTHON_IMPLEMENTATION.md  README.md  RELEASE.md  TECHNICAL_DESIGN.md  VERSION_MANAGEMENT.md  WINDOWS_TROUBLESHOOTING.md
docs/assets/: .gitkeep
hooks/: hook-customtkinter.py
horloq/: __init__.py  __main__.py  cli.py
horloq/core/: __init__.py  app.py  config.py  events.py  theme.py  updater.py
horloq/plugins/: __init__.py  base.py  installer.py  loader.py  manager.py
horloq/plugins/builtin/: __init__.py  hello.py  stopwatch.py  timer.py
horloq/ui/: __init__.py  clock.py  menu.py  plugin_manager.py  settings.py  window.py
horloq/utils/: __init__.py
scripts/: build.bat  build.sh  check_python_env.py  release-commit.sh
