[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horloq"
version = "0.1.0"
description = "拡張可能デスクトップ据え置き時計"
readme = "README.md"
authors = [
    {name = "Nyayuta1060", email = ""}
]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
]
dependencies = [
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "pytz>=2023.3",
    "PyYAML>=6.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pylint>=3.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Nyayuta1060/Horloq"
Repository = "https://github.com/Nyayuta1060/Horloq"
Issues = "https://github.com/Nyayuta1060/Horloq/issues"

[project.scripts]
horloq = "horloq.__main__:main"

[tool.setuptools]
packages = ["horloq", "horloq.core", "horloq.ui", "horloq.plugins", "horloq.utils"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
